# testforge-ai

./: .gitignore  README.md  conftest.py  main.py  pyproject.toml  pytest.ini  test_ai.py
ai/: __init__.py  bug_report.py  prompts.py
app/: dashboard.py
automation/pages/: base_page.py  login_page.py
automation/tests/: test_demo.py  test_login.py
config/: settings.py
test_data/: login_data.py
utils/: driver.py  logger.py
