[project]
name = "testforge-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=2.12.1",
    "loguru>=0.7.3",
    "pillow>=12.3.0",
    "pytest>=9.1.1",
    "pytest-html>=4.2.0",
    "python-dotenv>=1.2.2",
    "selenium>=4.46.0",
    "streamlit>=1.59.2",
    "webdriver-manager>=4.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
]
